# ssip-client-async

./: .gitlab-ci.yml  Cargo.toml  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml  dependabot.yml
examples/: async-mio.rs  async_mio_loop.rs  async_popol_loop.rs  async_tokio.rs  hello.rs  list.rs  notifications.rs
src/: async_mio.rs  async_std.rs  client.rs  constants.rs  fifo.rs  lib.rs  net.rs  poll.rs  protocol.rs  tcp.rs  tokio.rs  types.rs  unix.rs
ssip/: Cargo.toml
ssip-client-async/: Cargo.toml
ssip-client-async/examples/: async_mio_loop.rs  async_popol_loop.rs  async_smol.rs  async_tokio.rs  automatic_language_detection.rs  hello.rs  list.rs  notifications.rs  spawn_speechd.rs
ssip-client-async/src/: async_io.rs  async_std.rs  client.rs  constants.rs  error.rs  fifo.rs  language_detection.rs  lib.rs  net.rs  poll.rs  protocol.rs  smol.rs  tcp.rs  tokio.rs
ssip-client-async/tests/: mio_tests.rs  server.rs  synchronous_tests.rs
ssip-common/: Cargo.toml  README.md
ssip-common/src/: lib.rs
ssip/src/: constants.rs  error.rs  lib.rs  protocol.rs
tests/: fifo_async_tests.rs  fifo_client_tests.rs  fifo_sync_tests.rs  mio_tests.rs  server.rs  synchronous_tests.rs
