[package]
name = "ssip-client"
version = "0.2.0"
authors = ["Laurent Pelecq <lpelecq+rust@circoise.eu>"]
edition = "2018"
description = "Client API for Speech Dispatcher"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4"
thiserror = "1"
strum = "0.24"
strum_macros = "0.24"

[dev-dependencies]
libc = "0"
