[package]
name = "ssip-client"
version = "0.8.1"
authors = ["Laurent Pelecq <lpelecq+rust@circoise.eu>"]
edition = "2018"
description = "Client API for Speech Dispatcher"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/lp-accessibility/ssip-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
mio = { version = "0.8", optional = true }
thiserror = "1"
strum = "0.24"
strum_macros = "0.24"

[features]
async-mio = ["mio/net", "mio/os-poll"]

[dev-dependencies]
mio = { version = "0.8", features = ["os-poll", "os-ext"] }
lazy_static = "1"
popol = "0.5"
tempfile = "3"

