[package]
name = "ssip-client-async"
version = "0.16.1"
rust-version = "1.81.0"
authors = ["Laurent Pelecq <lpelecq+rust@circoise.eu>", "Tait Hoyem <tait@tait.tech>"]
edition = "2021"
description = "Client API for Speech Dispatcher"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/odilia-app/ssip-client-async/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssip = { version = "0.4.1", path = "../ssip" }
dirs = "6"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
mio = { version = "1.0", optional = true }
tokio = { version = "1.0", features = ["io-util", "rt", "macros", "net"], optional = true }
async-net = { version = "2.0", optional = true, default-features = false }
futures-lite = { version = "2.6.0", optional = true, default-features = false }

[features]
dbus = ["ssip/dbus"]
serde = ["ssip/serde"]
async-mio = ["mio/net", "mio/os-poll"]
tokio = ["dep:tokio"]
async-io = ["dep:async-io", "dep:async-net", "dep:futures-lite"]

[dev-dependencies]
mio = { version = "1.0", features = ["os-poll", "os-ext"] }
tokio = { version = "1.0", features = ["io-util", "rt"] }
ssip-client-async = { path = ".", features = ["tokio", "async-io"] }
lazy_static = "1"
popol = "1"
tempfile = "3"
smol-macros = "0.1.1"
