[package]
name = "ssip-common"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "Common data types used for clients and servers using the SSIP protocol."
license = "Apache-2.0 or MIT"
repository = "https://github.com/odilia-app/ssip-client-async/"
homepage = "http://htmlpreview.github.io/?https://github.com/brailcom/speechd/blob/master/doc/ssip.html"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24.1"
strum_macros = "0.24"
thiserror = "1.0.40"
