[package]
name = "ssip"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "A set of types for representing SSIP requests and responses."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/odilia-app/ssip-client-async/"
homepage = "http://htmlpreview.github.io/?https://github.com/brailcom/speechd/blob/master/doc/ssip.html"

[dependencies]
strum = "0.24.1"
strum_macros = "0.24"
thiserror = "1.0.40"
