[package]
name = "ssip"
version = "0.2.0"
edition = "2021"
rust-version = "1.81.0"
readme = "README.md"
description = "A set of types for representing SSIP requests and responses."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/odilia-app/ssip-client-async/"
homepage = "http://htmlpreview.github.io/?https://github.com/brailcom/speechd/blob/master/doc/ssip.html"
authors = [
	"Tait Hoyem <tait@tait.tech>",
	"Laurent Pelecq <lpelecq+rust@circoise.eu",
]
keywords = ["ssip", "protocol"]

[dependencies]
strum_macros = { version = "0.26", default-features = false }
thiserror = { version = "2.0", default-features = false }
zvariant = { version = "5.4.0", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
default = []
serde = ["dep:serde"]
dbus = ["serde", "dep:zvariant"]
